# synth3f_modulos_cpp

./: LICENSE  README.md  main.cpp
src/: maximilian.h
src/modules/: vco.cpp  vco.h
test/: CMakeLists.txt  classTest.cpp  main.cpp  vcoTest.cpp
